<resources>
    <string name="app_name">HelpCar</string>
    <string name="string_calleds">Chamados</string>
    <string name="string_register">Cadastro</string>
    <string name="string_brandVehicle">Marca do veículo*</string>
    <string name="string_modelVehicle">Modelo do veículo*</string>
    <string name="string_description">Descrição</string>
    <string name="string_btnCancelar">Cancelar</string>
    <string name="string_btnConfirmar">Confirmar</string>
    <string name="string_btnRegister">Cadastrar</string>
    <string name="string_name">Nome*</string>
    <string name="string_cpf">CPF*</string>
    <string name="string_email">E-mail*</string>
    <string name="string_formaCalledTitle">Novo Chamado</string>
    <string name="string_location">Localização</string>
    <string name="string_save">Salvar</string>
    <string name="string_photo">Foto</string>
    <string name="string_profile">Perfil</string>
    <string name="string_called">Chamado</string>
    <string name="string_support">Suporte</string>
    <string name="string_btnEnviar">Enviar</string>
    <string name="string_emailSupport">support@helpcar.com.br</string>
    <string name="string_emailAsk">Descreva seu problema</string>
    <string name="string_help">Help</string>
    <string name="string_car">Car</string>
    <string name="string_powered">powered by F5</string>
    <string name="string_password">Senha*</string>
    <string name="string_login">Login</string>
    <string name="string_btnNewRegister">Não possui uma conta? Registre-se</string>
    <string name="string_confirmPassword">Confirmar Senha*</string>

</resources>
