<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/iconHelpCar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="200dp"
        android:src="@drawable/ic_winch_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_help"
        android:textColor="@color/colorWhite"
        android:textSize="60dp"
        android:layout_marginStart="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconHelpCar"
        tools:layout_editor_absoluteX="83dp" />

    <TextView
        android:id="@+id/textCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_car"
        android:textColor="@color/colorWhite"
        android:textSize="60dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textHelp"
        app:layout_constraintTop_toBottomOf="@+id/iconHelpCar" />

    <TextView
        android:id="@+id/powered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/string_powered"
        android:textColor="@color/colorWhite"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>