<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent" android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="32dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutBrand"
            android:layout_width="0dp"
            android:layout_marginTop="90dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_brandVehicle"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutModelVehicle"
        android:layout_width="0dp"
        android:layout_marginTop="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutBrand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textModelVehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_modelVehicle"
            android:inputType="textCapSentences"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutBodyDescription"
            android:layout_width="0dp"
            android:layout_marginTop="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutModelVehicle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_description"
                android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/imageCardView"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutBodyDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone">

            <ImageView
                android:id="@+id/calledPhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnConfirmCalled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageCardView"
            android:text="@string/string_btnConfirmar"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorAccent"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/btnConfirmCalled"
            app:layout_constraintTop_toBottomOf="@+id/imageCardView"
            android:text="@string/string_btnCancelar"
            android:textColor="@color/colorAccent"
            style="?attr/borderlessButtonStyle"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
