<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent" android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="32dp">

        <EditText
            android:id="@+id/textEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:inputType="textCapWords"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />

        <EditText
            android:id="@+id/textBodyEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start|top"
            android:layout_marginTop="32dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:hint="@string/string_emailAsk"
            android:inputType="textMultiLine"
            app:layout_constraintTop_toBottomOf="@+id/textEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/imageCardView"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textBodyEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone">

            <ImageView
                android:id="@+id/calledPhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnConfirmCalled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageCardView"
            android:text="@string/string_btnEnviar"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorAccent"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/btnConfirmCalled"
            app:layout_constraintTop_toBottomOf="@+id/imageCardView"
            android:text="@string/string_btnCancelar"
            android:textColor="@color/colorAccent"
            style="?attr/borderlessButtonStyle"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
